--- a/assets/custom.css
+++ b/assets/custom.css
@@ -2,6 +2,11 @@
     font-weight: var(--FONT-WEIGHT-BODY-BOLD);
 }
 
+.shop-pay-terms {
+    font-size: .875rem;
+    margin-top: 1.5rem;
+}
+
 @media screen and (max-width: 767px) {
     .product__tag--desktop {
         display: none;
