--- a/sections/subfooter.liquid
+++ b/sections/subfooter.liquid
@@ -52,14 +52,8 @@
 
       <div class="subfooter__item subfooter__item--copyright">
         <small>
-          {{ 'layout.footer.copyright' | t }} &copy; {{ shop.name }}
+          &copy; {{ shop.name }}
           {{ 'now' | date: '%Y' }}
-
-          <!-- Remove the following two lines to delete Powered by Shopify from your footer -->
-          <span class="divider-bar">|</span>
-          <!-- Remove the following line to delete Shopify credit -->
-          <span data-powered-link>{{ powered_by_link }}</span>
-          <!-- Stop deleting here -->
         </small>
       </div>
 
