variant price now appears in add to cart button

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -200,6 +200,9 @@
       just cut this next line and paste it outside this comment.
       <script src="{{ 'custom.js' | asset_url }}" defer="defer"></script>
     {%- endcomment -%}
+    {% if template.name == 'product' %}
+        <script src="{{ 'custom-product.js' | asset_url }}" defer="defer"></script>
+    {% endif %}
 
     <!-- Paste third party scripts below this comment line ============== -->
 
